--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4"
 chrono = "0.4.31"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-lsp-types = "0.95.0"
+lsp-types = { version = "0.95", features = ["proposed"] }
 dunce = "1.0.4"
 tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync"] }
 tokio-stream = "0.1.14"
